# visualsynth

./: .gitignore  CMakeLists.txt  README.md  Verkefnalýsing.docx  Verklagslýsing.docx  main.cpp  main.h  main.qml  Áhættugreining.docx
.github/workflows/: SetupQt.yml  SetupQtWindow.yml  cmake.yml
docs/: .swp  Framvinduyfirlit.docx  Greiningar og hönnnunargögn.docx  Verkefnalýsing.docx  Verklagslýsing.docx  variables.txt  verkefnalýsing.txt  ~$einingar og hönnnunargögn.docx  ~WRL1744.tmp  Áhættugreining.docx
lib/LoveCommunicationTcp/: LoveCommunicationTcp.cpp  LoveCommunicationTcp.h  floating_fix.cpp
src/: ConnectionInfo.qml  FontAwesome.cpp  FontAwesome.h  TextInputDialog.qml  ToggleButton.qml  main.cpp  main.h  main.qml
src/Alert/: AlertController.cpp  AlertController.h
src/AmpEnvelope/: AmpEnvView.h
src/AmpEnvelope/AmpGraph/: AmpEnvGraphView.cpp  AmpEnvGraphView.h  DraggingTouchPoint.h
src/AmpEnvelope/AmpGraph/AmpEnvParams/: AmpEnvParams.cpp  AmpEnvParams.h
src/AmpEnvelope/AmpGraph/LineBetweenParams/: Line.cpp  Line.h
src/BoxView/: Box.cpp  Box.h  BoxView.cpp  BoxView.h  BoxViewRenderer.cpp  BoxViewRenderer.h  NewBox.cpp  NewBox.h  OperatorDrawer.cpp  OperatorDrawer.h
src/Controller/: AmpEnvValue.h  Api.cpp  Api.h  Controller.cpp  Controller.h  LfoWaveType.h  Operator.cpp  Operator.h  Preset.h  controller.cpp  controller.h
src/Controller/Intersynth/: floating_fix.cpp  floating_fix.h  intersynth.cpp  intersynth.h  messages.h
src/Controllers/Alert/: AlertController.cpp  AlertController.h
src/Controllers/Controller/: Api.h  Controller.cpp  Controller.h  Operator.cpp  Preset.h
src/Dialog/: DialogController.cpp  DialogController.h
src/GlUtils/: Utils.cpp  Utils.h
src/OperatorInfo/: infoView.h
src/OperatorPresetsView/: OperatorPresetView.cpp  OperatorPresetView.h  OperatorPresetsView.cpp  OperatorPresetsView.h
src/OperatorView/: AddOperatorBox.cpp  AddOperatorBox.h  DeleteOperatorBox.cpp  DeleteOperatorBox.h  OperatorDrawer.cpp  OperatorDrawer.h  OperatorView.cpp  OperatorView.h  PresetButton.cpp  PresetButton.h
src/OperatorWaveView/: OperatorWaveView.cpp
src/OutputWaveView/: OutputWaveView.cpp  OutputWaveView.h
src/Presets/: Presets.cpp  Presets.h
src/SinWaveView/: SinWaveItem.cpp  SinWaveItem.h  SinWaveRenderer.cpp  SinWaveRenderer.h
src/UiComponents/Core/: CustomBorder.qml
src/UiComponents/Sections/: AmpEnvSection.qml  BottomAlertView.qml  ConnectionSection.qml  GlobalLfoOptionsSection.qml  OperatorInfoSection.qml  OperatorViewSection.qml  OutputWaveSection.qml  TextInputDialog.qml
src/Utils/: ColorTweenAnimation.cpp  ColorTweenAnimation.h  FontAwesome.cpp  PointTweenAnimation.cpp  PointTweenAnimation.h  TouchPoint.h  TweenAnimation.cpp  TweenAnimation.h  Utils.cpp  Utils.h
src/Utils/Animations/: ColorTweenAnimation.cpp  ColorTweenAnimation.h  PointTweenAnimation.cpp  TweenAnimation.cpp  TweenAnimation.h
src/Views/AmpEnvelope/AmpGraph/: AmpEnvGraphView.cpp  AmpEnvGraphView.h  DraggingTouchPoint.h
src/Views/OperatorPresetsView/: OperatorPresetView.cpp  OperatorPresetsView.cpp  OperatorPresetsView.h
src/Views/OperatorView/: AddOperatorBox.cpp  AddOperatorBox.h  DeleteOperatorBox.cpp  DeleteOperatorBox.h  OperatorDrawer.cpp  OperatorDrawer.h  OperatorView.cpp  OperatorView.h  PresetButton.cpp  PresetButton.h
src/Views/OperatorWaveView/: OperatorWaveView.cpp  OperatorWaveView.h
src/Views/OutputWaveView/: OutputWaveView.cpp
src/lovecommunicationtcp/: lovecommunicationtcp.cpp  lovecommunicationtcp.h
